--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,171 @@
 <resources>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- 字体大小 -->
+    <dimen name="wheel_font_size">20sp</dimen>
+
+
+    <!-- 选择器：滚轮行高 -->
+    <dimen name="wheel_line_split_height">24dp</dimen>
+
+    <!-- 主页主功能 上下留白高度-->
+    <dimen name="main_item_padding_height">10dp</dimen>
+
+    <!-- 自定义对话框宽度 -->
+    <dimen name="dialog_width">300dp</dimen>
+
+    <!-- 列表项高度 -->
+    <dimen name="list_item_height">64dp</dimen>
+
+    <!-- checkbox左边padding宽度 -->
+    <dimen name="checkbox_left_padding">30dp</dimen>
+
+    <!-- 日期选择背景圆角半径 -->
+    <dimen name="date_check_radius">3dp</dimen>
+
+
+    <!-- PullToRefresh Library -->
+    <dimen name="indicator_right_padding">10dp</dimen>
+    <dimen name="indicator_corner_radius">12dp</dimen>
+    <dimen name="indicator_internal_padding">4dp</dimen>
+    <dimen name="header_footer_left_right_padding">24dp</dimen>
+    <dimen name="header_footer_top_bottom_padding">12dp</dimen>
+
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!--loadingButton的笔迹大小-->
+    <dimen name="cpb_stroke_width">4dp</dimen>
+
+    <dimen name="checkbox_width">16dp</dimen>
+    <dimen name="item_margin_left">15dp</dimen>
+    <dimen name="item_title_size">16sp</dimen>
+    <dimen name="item_normal_size">16sp</dimen>
+
+    <dimen name="small_button_width">54dp</dimen>
+    <dimen name="small_button_height">30dp</dimen>
+
+    <dimen name="small_item_height">56dp</dimen>
+    <dimen name="pop_item_margin">25dp</dimen>
+
+
+    <!--HeaderTitle -->
+    <dimen name="font_20">15sp</dimen>
+    <dimen name="first_title_font_size">18sp</dimen>
+    <dimen name="second_title_font_size">16sp</dimen>
+    <dimen name="third_title_font_size">16sp</dimen>
+    <dimen name="edit_text_size">15sp</dimen>
+    <dimen name="function_font_size">15sp</dimen>
+    <dimen name="font_11">11sp</dimen>
+    <dimen name="font_12">12sp</dimen>
+    <dimen name="font_13">13sp</dimen>
+    <dimen name="font_14">14sp</dimen>
+    <dimen name="font_17">17sp</dimen>
+    <dimen name="common_question_q_font_size">15sp</dimen>
+    <dimen name="common_question_a_font_size">14sp</dimen>
+    <dimen name="device_one_rate_size">24sp</dimen>
+    <dimen name="device_one_unit_size">14sp</dimen>
+
+
+    <dimen name="basic_padding_left">14dp</dimen>
+    <dimen name="basic_padding_right">14dp</dimen>
+    <dimen name="basic_toolbox_padding">12dp</dimen>
+    <dimen name="basic_margin_xxx_left">84dp</dimen>
+    <dimen name="basic_margin_x_right">24dp</dimen>
+    <dimen name="basic_margin_xx_right">30dp</dimen>
+    <dimen name="basic_margin_xxx_right">46dp</dimen>
+    <dimen name="basic_margin_xxxx_right">56dp</dimen>
+    <dimen name="basic_padding_x_top">22dp</dimen>
+    <dimen name="basic_padding_h_top">17dp</dimen>
+    <dimen name="basic_padding_top">15dp</dimen>
+    <dimen name="basic_padding_m_top">10dp</dimen>
+    <dimen name="basic_padding_bottom">15dp</dimen>
+    <dimen name="basic_padding_h_bottom">17dp</dimen>
+    <dimen name="basic_margin_xh_bottom">21dp</dimen>
+    <dimen name="basic_drawable_padding">16dp</dimen>
+    <dimen name="header_height">50dp</dimen>
+    <dimen name="header_icon_padding_left">18dp</dimen>
+    <dimen name="function_icon_padding_left">17dp</dimen>
+    <dimen name="function_icon_width_height">30dp</dimen>
+
+    <!--RadioGroup-->
+    <dimen name="radio_group_height">48dp</dimen>
+
+    <!--line-->
+    <dimen name="line_width">0.5dp</dimen>
+
+    <dimen name="feedback_picture_layout_width">64dp</dimen>
+    <dimen name="feedback_picture_width">60dp</dimen>
+    <dimen name="feedback_delete_picture_width">17dp</dimen>
+
+    <dimen name="item_m_height">46dp</dimen>
+    <dimen name="item_height">50dp</dimen>
+    <dimen name="item_x_height">60dp</dimen>
+    <dimen name="item_xm_height">70dp</dimen>
+    <dimen name="item_xx_height">73dp</dimen>
+    <dimen name="item_xxm_height">75dp</dimen>
+    <dimen name="item_logo_height">50dp</dimen>
+    <dimen name="item_logo_width">50dp</dimen>
+
+
+    <dimen name="right_icon_width">8dp</dimen>
+    <dimen name="right_icon_height">13dp</dimen>
+    <dimen name="right_icon_padding_right">12dp</dimen>
+    <dimen name="speed_fragment_height">155dp</dimen>
+    <dimen name="big_btn_padding_top">49dp</dimen>
+    <dimen name="big_btn_padding_left_right">33dp</dimen>
+    <dimen name="big_btn_padding_xx_left_right">85dp</dimen>
+    <dimen name="big_btn_m_height">34dp</dimen>
+    <dimen name="big_btn_height">36dp</dimen>
+    <dimen name="big_btn_x_height">44dp</dimen>
+    <!--ToogleButton-->
+    <dimen name="basic_togglebutton_width">46dp</dimen>
+    <dimen name="basic_togglebutton_height">32dp</dimen>
+
+    <dimen name="timepicker_padding_top">47dp</dimen>
+    <dimen name="timepicker_padding_bottom">43dp</dimen>
+
+    <dimen name="choose_day_dialog_header_height">50dp</dimen>
+    <dimen name="choose_day_dialog_header_item_height">39dp</dimen>
+    <dimen name="choose_day_dialog_footer_height">85dp</dimen>
+
+    <dimen name="check_box_width">18dp</dimen>
+    <dimen name="check_box_height">18dp</dimen>
+
+    <dimen name="choose_icon_height">14dp</dimen>
+    <dimen name="choose_icon_width">19dp</dimen>
+    <dimen name="seekbar_height">26dp</dimen>
+
+    <dimen name="radio_group_margin_top">9dp</dimen>
+    <dimen name="radio_group_margin_bottom">11dp</dimen>
+    <dimen name="radio_group_m_height">29dp</dimen>
+
+    <dimen name="internet_padding_right">68dp</dimen>
+    <dimen name="internet_function_width">128dp</dimen>
+    <dimen name="toolbox_logo_height_width">40dp</dimen>
+
+    <dimen name="usb_type_icon_width_height">36dp</dimen>
+    <dimen name="usb_type_icon_padding_top_bottom">19dp</dimen>
+
+    <dimen name="button_h_height">34dp</dimen>
+    <dimen name="button_h_width">150dp</dimen>
+    <dimen name="rotate_s_width_height">18dp</dimen>
+    <dimen name="static_ip_edit_padding">20dp</dimen>
+
+    <dimen name="error_header_padding_top">35dp</dimen>
+    <dimen name="error_image_padding_top">43dp</dimen>
+    <dimen name="error_image_width">145dp</dimen>
+    <dimen name="error_image_height">128dp</dimen>
+    <dimen name="error_icon_width">100dp</dimen>
+    <dimen name="error_icon_height">100dp</dimen>
+    <dimen name="send_code_height">26dp</dimen>
+    <dimen name="padding_20">10dp</dimen>
+    <dimen name="padding_15">8dp</dimen>
+    <dimen name="padding_30">15dp</dimen>
+    <dimen name="signal_16">14sp</dimen>
+    <dimen name="signal_13">12sp</dimen>
 </resources>
+
+
