--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,14 @@
    >
 
    <View
-       android:id="@+id/wifi_acclerate_layout_top_1"
+       android:id="@+id/check_layout_top_1"
        android:layout_width="match_parent"
        android:layout_height="352dp"
        />
 
 
    <View
-       android:id="@+id/wifi_acclerate_layout_top_2"
+       android:id="@+id/check_layout_top_2"
        android:layout_width="match_parent"
        android:layout_height="352dp"
        android:background="@color/wifi_acclerate_green"
@@ -21,42 +21,20 @@
 
 
    <RelativeLayout
-       android:id="@+id/wifi_acclerate_layout_top"
+       android:id="@+id/check_layout_top"
        android:layout_width="match_parent"
        android:layout_height="352dp"
        android:visibility="visible"
        >
-      <RelativeLayout
+      <View
           android:id="@+id/header"
           android:layout_width="match_parent"
           android:layout_height="@dimen/header_height"
-          >
-
-        <!-- <ImageButton
-             android:id="@+id/btn_back"
-             android:layout_width="56dp"
-             android:layout_height="match_parent"
-             android:layout_alignParentLeft="true"
-             android:layout_centerVertical="true"
-             android:background="@null"
-             android:contentDescription="@string/back"
-             android:paddingLeft="@dimen/header_icon_padding_left"
-             android:paddingRight="26dp"
-             android:src="@drawable/header_btn_back_white_selector" />
-
-         <TextView
-             android:id="@+id/header_title"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:gravity="center"
-             android:text="@string/wifi_acclerate_tittle"
-             android:textColor="@color/white"
-             android:textSize="@dimen/first_title_font_size" />-->
-      </RelativeLayout>
+          />
 
 
       <RelativeLayout
-          android:id="@+id/wifi_acclerate_layout_acclerate"
+          android:id="@+id/check_layout_acclerate"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/header"
@@ -65,19 +43,19 @@
           >
 
          <RelativeLayout
-             android:id="@+id/wifi_acclerate_layout_animator"
+             android:id="@+id/check_layout_animator"
              android:layout_width="200dp"
              android:layout_height="200dp"
              android:layout_centerHorizontal="true"
              >
 
             <com.wujie.radarview.view.RadarView
-                android:id="@+id/wifi_acclerate_radar_view"
+                android:id="@+id/check_radar_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                  />
             <com.wujie.radarview.view.RaderWheelView
-                android:id="@+id/wifi_acclerate_radar_wheel_view"
+                android:id="@+id/check_radar_wheel_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
@@ -87,7 +65,7 @@
                 android:layout_centerInParent="true"
                 >
                <TextView
-                   android:id="@+id/wifi_acclerate_tv_score"
+                   android:id="@+id/check_tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
@@ -100,16 +78,15 @@
                    android:text="分"
                    android:textSize="@dimen/font_14"
                    android:textColor="@color/white"
-                   android:layout_alignTop="@+id/wifi_acclerate_tv_score"
-                   android:layout_toRightOf="@+id/wifi_acclerate_tv_score"
+                   android:layout_alignTop="@+id/check_tv_score"
+                   android:layout_toRightOf="@+id/check_tv_score"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
                <Button
                    android:id="@+id/wifi_acclerate_btn"
                    android:layout_width="wrap_content"
-                   android:layout_height="28dp"
-
-                   android:layout_below="@+id/wifi_acclerate_tv_score"
+                   android:layout_height="36dp"
+                   android:layout_below="@+id/check_tv_score"
                    android:text="立即优化"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
@@ -128,7 +105,7 @@
              android:id="@+id/wifi_acclerate_tv_tip"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
-             android:layout_below="@id/wifi_acclerate_layout_animator"
+             android:layout_below="@id/check_layout_animator"
              android:gravity="center"
              android:paddingTop="15dp"
              android:paddingLeft="@dimen/basic_padding_left"
@@ -163,7 +140,7 @@
       </RelativeLayout>
 
       <RelativeLayout
-          android:id="@+id/wifi_acclerate_layout_optimize"
+          android:id="@+id/check_layout_optimize"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="20dp"
@@ -171,7 +148,7 @@
           android:visibility="gone">
 
          <RelativeLayout
-             android:id="@+id/wifi_optimize_layout_animator"
+             android:id="@+id/checkd_layout_animator"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >
@@ -228,7 +205,7 @@
              android:id="@+id/wifi_optimize_tv_tip"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
-             android:layout_below="@+id/wifi_optimize_layout_animator"
+             android:layout_below="@+id/checkd_layout_animator"
              android:gravity="center"
              android:paddingBottom="38dp"
              android:paddingTop="14dp"
@@ -241,8 +218,6 @@
 
    </RelativeLayout>
 
-
->
 
 
 </RelativeLayout>
